style.css
* {
  font-family: 'Josefin Sans', sans-serif;
}

html{
  height: 100%;
}

/* ABOUT PAGE */
/* .navbar-nav {
  position: absolute;
  right: 0;
  margin: 0 15px;
} */

.navbar-brand {
  /* margin-left: 40px; */
  text-transform: uppercase;
  
  
}

nav{
  margin: 0 auto;
  width: 100%
}

header{
  background-color: #487BFF
}

.navbar-brand:hover{
  border-top: none;
}


nav a:hover{
  animation: pulse;
  animation-duration: .45s;
  border-bottom: solid 1px white;
}

.navbar-nav{
  margin-right: 70px;
}



body {
  background: url(images/mtn.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.header {
  margin-left: 15px;
  border-bottom: solid 1px #3C5DA2;
}


.face {
  width: 30%;
  border-radius: 6%;
  background-color: white;
  margin-right: 15px;
  
}

p {
  line-height: 45px;
  
}

#about-me {
  margin-top: 115px;
  
}

main a {
    font-size: 55px;
    margin: auto 17px;
    
    
}

#social a:hover{
  text-decoration: none;
}



 /* Main Content */

#main-content {
  background-color:rgb(248, 247, 247, 0.8);
  border-radius: 15px;
  padding: 15px;

  border: solid 2px #3C5DA2;

}




/* CONTACT PAGE */
#column{
    margin-top: 150px;
    background-color: rgb(248, 247, 247, 0.8);
    padding: 15px;
    border-radius: 15px;
    margin-left: 45px;
    border: solid 2px #3C5DA2;
}

.header-contact{
    border-bottom: solid 1px #3C5DA2;
}

.footer {
    width: 100%;
    background-color: white;
    position: fixed;
    bottom: 0;
    text-align: center;
  }
  
  h6{
      font-size: 10px;
      padding-top: 10px;
  }

  /* PORTFOLIO PAGE */

  .project-header{
      border-bottom: solid 1px #3C5DA2;
      
  }

  #main-column{
      background-color:rgb(248, 247, 247, 0.8);
      margin-top: 50px;
      padding-bottom: 20px;
      padding-top: 20px;
      border-radius: 15px;
      border: solid 2px #3C5DA2;

  }

  .wrapper{
    min-height: 100%;
  }

  .sample-image{
   margin: 10px 0px;
    
  }

  .img-thumbnail{
      border: solid 1px #3C5DA2;
     
  }





/* Media Queries */

@media only screen and (max-width: 576px) {
  .col-md-8 {
    margin-top: -40px;
  }

  .navbar-brand {
    margin: auto 0;
  }

  h1 {
    text-align: center;
  }

  #column{
      margin-left: 0px;
      margin-right: 0px;
      
  } 

  #social{
    margin-left: 0;
  }
  
}

